force-app/main/default/objects/FEC_MDM_Master_Data_Setting__c/FEC_MDM_Master_Data_Setting__c.object-meta.xml
<CustomObject>
    <description>Là bảng dữ liệu chứa bộ Setting của một bộ Nature of Case</description>
    <label>Master MDM Data Setting</label>
    <nameField>
        <displayFormat>MDS-{0}</displayFormat>
        <label>MDS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Master MDM Data Setting</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>