force-app/main/default/objects/FEC_MDM_Master_Data_Setting__c/fields/FEC_Applicable_Role__c.field-meta.xml
<CustomField>
    <fullName>FEC_Applicable_Role__c</fullName>
    <description>Đối tượng người dùng nằm trong giai đoạn (Stage) hỗ trợ</description>
    <label>Applicable Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>