force-app/main/default/objects/FEC_MDM_Master_Data_Setting__c/fields/FEC_Channel__c.field-meta.xml
<CustomField>
    <fullName>FEC_Channel__c</fullName>
    <label>FEC Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>