force-app/main/default/objects/FEC_MDM_Master_Data_Setting__c/fields/FEC_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>FEC_Customer_Type__c</fullName>
    <label>FEC Customer Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>