force-app/main/default/objects/FEC_MDM_Master_Data_Setting__c/fields/FEC_Editable_User_Group__c.field-meta.xml
<CustomField>
    <fullName>FEC_Editable_User_Group__c</fullName>
    <label>Editable User Group</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>User_Group</valueSetName>
    </valueSet>
</CustomField>