force-app/main/default/objects/FEC_MDM_Master_Data_Setting__c/fields/FEC_Field_Mandatory__c.field-meta.xml
<CustomField>
    <fullName>FEC_Field_Mandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tùy chọn trường bắt buộc trên màn hình Case</description>
    <label>Field Mandatory</label>
    <type>Checkbox</type>
</CustomField>