force-app/main/default/objects/FEC_MDM_Master_Data_Setting__c/fields/FEC_MDM_Channel__c.field-meta.xml
<CustomField>
    <fullName>FEC_MDM_Channel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Thông tin kênh được khai thác dữ liệu</description>
    <label>Channel</label>
    <referenceTo>FEC_MDM_Channel__c</referenceTo>
    <relationshipName>Master_Data_Setting</relationshipName>
    <type>Lookup</type>
</CustomField>