force-app/main/default/objects/FEC_MDM_Master_Data_Setting__c/fields/FEC_MDM_Data_Integration_Mapping__c.field-meta.xml
<CustomField>
    <fullName>FEC_MDM_Data_Integration_Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FEC Data Integration Mapping</label>
    <referenceTo>FEC_MDM_Data_Integration_Mapping__c</referenceTo>
    <relationshipName>Master_Data_Setting</relationshipName>
    <type>Lookup</type>
</CustomField>