force-app/main/default/objects/FEC_MDM_Master_Data_Setting__c/fields/FEC_Nature_Of_Case_ID__c.field-meta.xml
<CustomField>
    <fullName>FEC_Nature_Of_Case_ID__c</fullName>
    <label>FEC Nature Of Case ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>