force-app/main/default/objects/FEC_MDM_Master_Data_Setting__c/fields/FEC_Section__c.field-meta.xml
<CustomField>
    <fullName>FEC_Section__c</fullName>
    <description>Tên Section hiển thị</description>
    <label>Section</label>
    <length>255</length>
    <type>Text</type>
</CustomField>