force-app/main/default/objects/FEC_MDM_Master_Data_Setting__c/fields/FEC_Sub_Section__c.field-meta.xml
<CustomField>
    <fullName>FEC_Sub_Section__c</fullName>
    <description>Tên Sub Section hiển thị cho Original hoặc Updated Information</description>
    <label>Sub Section</label>
    <length>255</length>
    <type>Text</type>
</CustomField>