force-app/main/default/objects/FEC_MDM_Master_Data_Setting__c/fields/FEC_Sync_Hash__c.field-meta.xml
<CustomField>
    <fullName>FEC_Sync_Hash__c</fullName>
    <description>Vân tay nội dung (MD5) của các field nghiệp vụ — dùng so sánh Live↔MDM nhanh, heap-safe. KHÔNG dùng cho nghiệp vụ, không sync như field thường.</description>
    <label>Sync Hash</label>
    <length>32</length>
    <type>Text</type>
</CustomField>