force-app/main/default/objects/FEC_MDM_Master_Data_Setting__c/fields/Property_Reference__c.field-meta.xml
<CustomField>
    <fullName>Property_Reference__c</fullName>
    <label>Property Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>