force-app/main/default/objects/FEC_MDM_Master_Data_Setting__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FEC_MDM_Nature_Of_Case__c</columns>
    <columns>FEC_Nature_Of_Case_ID__c</columns>
    <columns>FEC_Section__c</columns>
    <columns>FEC_Applicable_Role__c</columns>
    <columns>FEC_Editable_Role__c</columns>
    <columns>FEC_MDM_Case_Stage__c</columns>
    <columns>FEC_MDM_Channel__c</columns>
    <columns>FEC_MDM_Additional_Field__c</columns>
    <columns>Process_Change_Status__c</columns>
    <columns>FEC_MDM_Data_Integration_Mapping__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>FEC_Field_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>